A fix (bug #6142: SELECT DISTINCT on key field crashes server)